--- a/_modules/index.html
+++ b/_modules/index.html
@@ -80,6 +80,7 @@
 <li><a href="evmspec/structs/trace/reward.html">evmspec.structs.trace.reward</a></li>
 <li><a href="evmspec/structs/trace/suicide.html">evmspec.structs.trace.suicide</a></li>
 <li><a href="evmspec/structs/transaction.html">evmspec.structs.transaction</a></li>
+<li><a href="faster_hexbytes/main.html">faster_hexbytes.main</a></li>
 </ul>
 
            </div>
