--- a/genindex.html
+++ b/genindex.html
@@ -101,6 +101,8 @@
 <h2 id="_">_</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.log.Data.__new__">__new__ (evmspec.structs.log.Data attribute)</a>
+</li>
       <li><a href="source/evmspec.data.html#evmspec.data.Address.__new__">__new__() (evmspec.data.Address static method)</a>
 
       <ul>
@@ -187,8 +189,6 @@
         <li><a href="source/evmspec.data.html#evmspec.data.UnixTimestamp.__new__">(evmspec.data.UnixTimestamp class method)</a>
 </li>
         <li><a href="source/evmspec.data.html#evmspec.data.Wei.__new__">(evmspec.data.Wei class method)</a>
-</li>
-        <li><a href="source/evmspec.structs.html#evmspec.structs.log.Data.__new__">(evmspec.structs.log.Data static method)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.log.Topic.__new__">(evmspec.structs.log.Topic static method)</a>
 </li>
@@ -3918,16 +3918,16 @@
         <li><a href="source/evmspec.html#evmspec.TransactionRLP.to">(evmspec.TransactionRLP attribute)</a>
 </li>
       </ul></li>
-      <li><a href="source/evmspec.data.html#evmspec.data.BlockHash.to_0x_hex">to_0x_hex() (evmspec.data.BlockHash method)</a>
+      <li><a href="source/evmspec.data.html#evmspec.data.BlockHash.to_0x_hex">to_0x_hex (evmspec.data.BlockHash attribute)</a>
 
       <ul>
-        <li><a href="source/evmspec.data.html#evmspec.data.HexBytes32.to_0x_hex">(evmspec.data.HexBytes32 method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.HexBytes32.to_0x_hex">(evmspec.data.HexBytes32 attribute)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.TransactionHash.to_0x_hex">(evmspec.data.TransactionHash method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.TransactionHash.to_0x_hex">(evmspec.data.TransactionHash attribute)</a>
 </li>
-        <li><a href="source/evmspec.structs.html#evmspec.structs.log.Data.to_0x_hex">(evmspec.structs.log.Data method)</a>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.log.Data.to_0x_hex">(evmspec.structs.log.Data attribute)</a>
 </li>
-        <li><a href="source/evmspec.structs.html#evmspec.structs.log.Topic.to_0x_hex">(evmspec.structs.log.Topic method)</a>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.log.Topic.to_0x_hex">(evmspec.structs.log.Topic attribute)</a>
 </li>
       </ul></li>
       <li><a href="source/evmspec.data.html#evmspec.data.BlockNumber.to_bytes">to_bytes() (evmspec.data.BlockNumber method)</a>
