--- a/_modules/evmspec/structs/trace/call.html
+++ b/_modules/evmspec/structs/trace/call.html
@@ -211,13 +211,10 @@
     <span class="n">_action</span><span class="p">:</span> <span class="n">Raw</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s2">&quot;action&quot;</span><span class="p">)</span>  <span class="c1"># type: ignore [assignment]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The raw call action data, parity style.&quot;&quot;&quot;</span>
 
-<div class="viewcode-block" id="Trace.action">
-<a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.call.Trace.action">[docs]</a>
     <span class="nd">@cached_property</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">action</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Action</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;The decoded call action, parity style.&quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="n">_decode_action</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_action</span><span class="p">)</span></div>
-
+        <span class="k">return</span> <span class="n">_decode_action</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_action</span><span class="p">)</span>
 
     <span class="n">result</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">Result</span><span class="p">]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
