--- a/_modules/evmspec/structs/trace/create.html
+++ b/_modules/evmspec/structs/trace/create.html
@@ -204,8 +204,6 @@
 <span class="sd">        - :attr:`action` for decoding this raw data.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
-<div class="viewcode-block" id="Trace.action">
-<a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.create.Trace.action">[docs]</a>
     <span class="nd">@cached_property</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">action</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Action</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Decodes the raw action data into an :class:`Action` object.</span>
@@ -225,8 +223,7 @@
             <span class="n">logger</span><span class="o">.</span><span class="n">error</span><span class="p">(</span>
                 <span class="sa">f</span><span class="s2">&quot;error decoding </span><span class="si">{</span><span class="n">json</span><span class="o">.</span><span class="n">decode</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_action</span><span class="p">)</span><span class="si">}</span><span class="s2"> into evmspec.structs.trace.create.Action&quot;</span>
             <span class="p">)</span>
-            <span class="k">raise</span></div>
-
+            <span class="k">raise</span>
 
     <span class="n">result</span><span class="p">:</span> <span class="n">Result</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The result object, adhering to the parity format, containing deployment details.</span>
