deploy: f4536b7041fa45d06e45043f129ef4cdbde05b94

--- a/genindex.html
+++ b/genindex.html
@@ -13,7 +13,7 @@
       <script src="_static/jquery.js?v=5d32c60e"></script>
       <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
       <script src="_static/documentation_options.js?v=5929fcd5"></script>
-      <script src="_static/doctools.js?v=9bcbadda"></script>
+      <script src="_static/doctools.js?v=9a2dae69"></script>
       <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/js/theme.js"></script>
     <link rel="index" title="Index" href="#" />
@@ -108,21 +108,21 @@
       <ul>
         <li><a href="source/evmspec.data.html#evmspec.data.BlockHash.__new__">(evmspec.data.BlockHash static method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.BlockNumber.__new__">(evmspec.data.BlockNumber class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.BlockNumber.__new__">(evmspec.data.BlockNumber method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.ChainId.__new__">(evmspec.data.ChainId class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.ChainId.__new__">(evmspec.data.ChainId method)</a>
 </li>
         <li><a href="source/evmspec.data.html#evmspec.data.HexBytes32.__new__">(evmspec.data.HexBytes32 static method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.LogIndex.__new__">(evmspec.data.LogIndex class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.LogIndex.__new__">(evmspec.data.LogIndex method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.Nonce.__new__">(evmspec.data.Nonce class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.Nonce.__new__">(evmspec.data.Nonce method)</a>
 </li>
         <li><a href="source/evmspec.data.html#evmspec.data.TransactionHash.__new__">(evmspec.data.TransactionHash static method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.TransactionIndex.__new__">(evmspec.data.TransactionIndex class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.TransactionIndex.__new__">(evmspec.data.TransactionIndex method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uint.__new__">(evmspec.data.uint class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uint.__new__">(evmspec.data.uint method)</a>
 </li>
         <li><a href="source/evmspec.data.html#evmspec.data.uints.uint104.__new__">(evmspec.data.uints.uint104 static method)</a>
 </li>
@@ -186,9 +186,9 @@
 </li>
         <li><a href="source/evmspec.data.html#evmspec.data.uints.uint96.__new__">(evmspec.data.uints.uint96 static method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.UnixTimestamp.__new__">(evmspec.data.UnixTimestamp class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.UnixTimestamp.__new__">(evmspec.data.UnixTimestamp method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.Wei.__new__">(evmspec.data.Wei class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.Wei.__new__">(evmspec.data.Wei method)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.log.Topic.__new__">(evmspec.structs.log.Topic static method)</a>
 </li>
@@ -1565,102 +1565,102 @@
 </li>
       <li><a href="source/evmspec.data.html#evmspec.data.Address.format_map">format_map() (evmspec.data.Address method)</a>
 </li>
-      <li><a href="source/evmspec.data.html#evmspec.data.BlockNumber.from_bytes">from_bytes() (evmspec.data.BlockNumber class method)</a>
+      <li><a href="source/evmspec.data.html#evmspec.data.BlockNumber.from_bytes">from_bytes() (evmspec.data.BlockNumber method)</a>
 
       <ul>
-        <li><a href="source/evmspec.data.html#evmspec.data.ChainId.from_bytes">(evmspec.data.ChainId class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.ChainId.from_bytes">(evmspec.data.ChainId method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.LogIndex.from_bytes">(evmspec.data.LogIndex class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.LogIndex.from_bytes">(evmspec.data.LogIndex method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.Nonce.from_bytes">(evmspec.data.Nonce class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.Nonce.from_bytes">(evmspec.data.Nonce method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.TransactionIndex.from_bytes">(evmspec.data.TransactionIndex class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.TransactionIndex.from_bytes">(evmspec.data.TransactionIndex method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uint.from_bytes">(evmspec.data.uint class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uint.from_bytes">(evmspec.data.uint method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint104.from_bytes">(evmspec.data.uints.uint104 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint104.from_bytes">(evmspec.data.uints.uint104 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint112.from_bytes">(evmspec.data.uints.uint112 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint112.from_bytes">(evmspec.data.uints.uint112 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint120.from_bytes">(evmspec.data.uints.uint120 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint120.from_bytes">(evmspec.data.uints.uint120 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint128.from_bytes">(evmspec.data.uints.uint128 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint128.from_bytes">(evmspec.data.uints.uint128 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint136.from_bytes">(evmspec.data.uints.uint136 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint136.from_bytes">(evmspec.data.uints.uint136 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint144.from_bytes">(evmspec.data.uints.uint144 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint144.from_bytes">(evmspec.data.uints.uint144 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint152.from_bytes">(evmspec.data.uints.uint152 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint152.from_bytes">(evmspec.data.uints.uint152 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint16.from_bytes">(evmspec.data.uints.uint16 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint16.from_bytes">(evmspec.data.uints.uint16 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint160.from_bytes">(evmspec.data.uints.uint160 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint160.from_bytes">(evmspec.data.uints.uint160 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint168.from_bytes">(evmspec.data.uints.uint168 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint168.from_bytes">(evmspec.data.uints.uint168 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint176.from_bytes">(evmspec.data.uints.uint176 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint176.from_bytes">(evmspec.data.uints.uint176 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint184.from_bytes">(evmspec.data.uints.uint184 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint184.from_bytes">(evmspec.data.uints.uint184 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint192.from_bytes">(evmspec.data.uints.uint192 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint192.from_bytes">(evmspec.data.uints.uint192 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint200.from_bytes">(evmspec.data.uints.uint200 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint200.from_bytes">(evmspec.data.uints.uint200 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint208.from_bytes">(evmspec.data.uints.uint208 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint208.from_bytes">(evmspec.data.uints.uint208 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint216.from_bytes">(evmspec.data.uints.uint216 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint216.from_bytes">(evmspec.data.uints.uint216 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint224.from_bytes">(evmspec.data.uints.uint224 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint224.from_bytes">(evmspec.data.uints.uint224 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint232.from_bytes">(evmspec.data.uints.uint232 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint232.from_bytes">(evmspec.data.uints.uint232 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint24.from_bytes">(evmspec.data.uints.uint24 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint24.from_bytes">(evmspec.data.uints.uint24 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint240.from_bytes">(evmspec.data.uints.uint240 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint240.from_bytes">(evmspec.data.uints.uint240 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint248.from_bytes">(evmspec.data.uints.uint248 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint248.from_bytes">(evmspec.data.uints.uint248 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint32.from_bytes">(evmspec.data.uints.uint32 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint32.from_bytes">(evmspec.data.uints.uint32 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint40.from_bytes">(evmspec.data.uints.uint40 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint40.from_bytes">(evmspec.data.uints.uint40 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint48.from_bytes">(evmspec.data.uints.uint48 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint48.from_bytes">(evmspec.data.uints.uint48 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint56.from_bytes">(evmspec.data.uints.uint56 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint56.from_bytes">(evmspec.data.uints.uint56 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint64.from_bytes">(evmspec.data.uints.uint64 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint64.from_bytes">(evmspec.data.uints.uint64 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint72.from_bytes">(evmspec.data.uints.uint72 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint72.from_bytes">(evmspec.data.uints.uint72 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint8.from_bytes">(evmspec.data.uints.uint8 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint8.from_bytes">(evmspec.data.uints.uint8 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint80.from_bytes">(evmspec.data.uints.uint80 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint80.from_bytes">(evmspec.data.uints.uint80 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint88.from_bytes">(evmspec.data.uints.uint88 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint88.from_bytes">(evmspec.data.uints.uint88 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint96.from_bytes">(evmspec.data.uints.uint96 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.uints.uint96.from_bytes">(evmspec.data.uints.uint96 method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.UnixTimestamp.from_bytes">(evmspec.data.UnixTimestamp class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.UnixTimestamp.from_bytes">(evmspec.data.UnixTimestamp method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.Wei.from_bytes">(evmspec.data.Wei class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.Wei.from_bytes">(evmspec.data.Wei method)</a>
 </li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/evmspec.data.html#evmspec.data.BlockHash.fromhex">fromhex() (evmspec.data.BlockHash class method)</a>
+      <li><a href="source/evmspec.data.html#evmspec.data.BlockHash.fromhex">fromhex() (evmspec.data.BlockHash method)</a>
 
       <ul>
         <li><a href="source/evmspec.data.html#evmspec.data.BlockNumber.fromhex">(evmspec.data.BlockNumber class method)</a>
 </li>
         <li><a href="source/evmspec.data.html#evmspec.data.ChainId.fromhex">(evmspec.data.ChainId class method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.HexBytes32.fromhex">(evmspec.data.HexBytes32 class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.HexBytes32.fromhex">(evmspec.data.HexBytes32 method)</a>
 </li>
         <li><a href="source/evmspec.data.html#evmspec.data.LogIndex.fromhex">(evmspec.data.LogIndex class method)</a>
 </li>
         <li><a href="source/evmspec.data.html#evmspec.data.Nonce.fromhex">(evmspec.data.Nonce class method)</a>
 </li>
-        <li><a href="source/evmspec.data.html#evmspec.data.TransactionHash.fromhex">(evmspec.data.TransactionHash class method)</a>
+        <li><a href="source/evmspec.data.html#evmspec.data.TransactionHash.fromhex">(evmspec.data.TransactionHash method)</a>
 </li>
         <li><a href="source/evmspec.data.html#evmspec.data.TransactionIndex.fromhex">(evmspec.data.TransactionIndex class method)</a>
 </li>
@@ -1732,9 +1732,9 @@
 </li>
         <li><a href="source/evmspec.data.html#evmspec.data.Wei.fromhex">(evmspec.data.Wei class method)</a>
 </li>
-        <li><a href="source/evmspec.structs.html#evmspec.structs.log.Data.fromhex">(evmspec.structs.log.Data class method)</a>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.log.Data.fromhex">(evmspec.structs.log.Data method)</a>
 </li>
-        <li><a href="source/evmspec.structs.html#evmspec.structs.log.Topic.fromhex">(evmspec.structs.log.Topic class method)</a>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.log.Topic.fromhex">(evmspec.structs.log.Topic method)</a>
 </li>
       </ul></li>
       <li><a href="source/evmspec.structs.html#evmspec.structs.log.FullLog">FullLog (class in evmspec.structs.log)</a>
